--- a/hwiflix/package.json
+++ b/hwiflix/package.json
@@ -10,6 +10,7 @@
     "global": "^4.4.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.0.0",
     "react-router-dom": "^5.1.2",
     "react-script": "^2.0.5",
     "react-scripts": "3.4.1",
